Don't suppress tracks.